--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  http: ^0.13.4
+  provider: ^6.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
